Redundant code cleanup. Got rid of grid (why did i even have it, flex-wrap fixed all my problems). Slight adjustments here and there.

--- a/jsLibraryProject.css
+++ b/jsLibraryProject.css
@@ -4,17 +4,16 @@ body * {
 }
 
 body {
-    position: relative;
-    display: grid;
-    grid-template-columns: repeat(auto-fill 1fr);
     width: 100%;
     background-color: rgba(200, 200, 200, 0.5);
 }
 
 #mainContainer {
-    display: flex;
     position: relative;
-    justify-content: center;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: left;
     align-items: center;
 }
 
@@ -30,7 +29,7 @@ body {
 .author {
     height: 20%;
     width: 100%;
-    background-color: rgba(255, 255, 0, 0.5);
+    background-color: rgba(255, 255, 0, 0.6);
     border-top-left-radius: 14px;
     border-top-right-radius: 14px;
     margin-top: 0;
@@ -39,9 +38,9 @@ body {
 .title { 
     height: 55%;
     width: 100%;
-    background-color: rgba(0, 255, 255, 0.5);
-    border-top: 3px solid black;
-    border-bottom: 3px solid black;
+    background-color: rgba(0, 255, 255, 0.6);
+    border-top: 3px solid rgb(0, 0, 0);
+    border-bottom: 3px solid rgb(0, 0, 0);
     margin-top: -1px;
 }
 
@@ -57,22 +56,20 @@ body {
     height: 60%;
     width: 10%;
     font-size: 1em;
-    color: black;
+    color: rgb(0, 0, 0);
     border: none;
 }
 
 .decrement {
-    left: 0;
-    background-color: brown;
-    border-left: 1px solid black;
-    border-right: 2px solid black;
+    background-color: rgba(150, 0, 0, 0.8);
+    border-left: 2px solid rgb(0, 0, 0);
+    border-right: 2px solid rgb(0, 0, 0);
 }
 
 .increment {
-    right: 0;
-    background-color: green;
-    border-left: 2px solid black;
-    border-right: 1px solid black;
+    background-color: rgba(0, 125, 0, 0.8);
+    border-left: 2px solid rgb(0, 0, 0);
+    border-right: 2px solid rgb(0, 0, 0);
 }
 
 .pages {
@@ -85,17 +82,16 @@ body {
     height: 60%;
     width: 30%;
     font-size: 16px;
+    font-weight: 600;
     text-align: center;
     box-sizing: border-box;
 }
 
 .readPages {
-    left: 0;
     background-color: rgba(255, 100, 255, 0.75);
 }
 
 .allPages {
-    right: 0;
     background-color: rgba(225, 0, 225, 0.75);
 }
 
@@ -107,7 +103,7 @@ body {
     flex-direction: column;
     height: 300px;
     width: 300px;
-    margin: 20px;
+    margin: 20px 40px;
     background-color: rgb(255, 255, 255);
     border: 6px solid rgb(0, 0, 0);
     border-radius: 20px;
@@ -123,13 +119,12 @@ body {
     width: 100%;
     font-size: 16px;
     font-weight: 600;
-    color: black;
+    color: rgb(0, 0, 0);
     background-color: rgba(255, 150, 0, 0.75);
     border: none;
     border-top: 4px solid rgb(0, 0, 0);
     border-bottom-left-radius: 14px;
     border-bottom-right-radius: 14px;
-    z-index: 1;
 }
 
 .deleteBookBtn, .updateBookBtn {
@@ -139,7 +134,7 @@ body {
     width: 50%;
     font-size: 16px;
     font-weight: 600;
-    color: black;
+    color: rgb(0, 0, 0);
     border-top: 4px solid rgb(0, 0, 0);
     border-bottom: none;
 }
@@ -148,16 +143,24 @@ body {
     left: 0;
     background-color: rgba(255, 0, 0, 0.75);
     border-left: none;
-    border-right: 2px solid black;
+    border-right: 2px solid rgb(0, 0, 0);
     border-bottom-left-radius: 14px;
+}
+
+.deleteBookBtn:hover {
+    background-color: rgba(255, 0, 0, 0.85);
 }
 
 .updateBookBtn {
     right: 0;
-    background-color: rgba(0, 200, 0, 0.75);
-    border-left: 2px solid black;
+    background-color: rgba(0, 225, 0, 0.75);
+    border-left: 2px solid rgb(0, 0, 0);
     border-right: none;
     border-bottom-right-radius: 14px;
+}
+
+.updateBookBtn:hover {
+    background-color: rgba(0, 225, 0, 0.95);
 }
 
 textarea {
